fixed spacing on editor page (checkout)

--- a/style/customise.css
+++ b/style/customise.css
@@ -463,7 +463,7 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .purchase-details ul li {
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 0.2rem;
   display: flex;
   justify-content: space-between;
 }
